Make overall style

--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battleship</title>
   </head>
-  <body></body>
+  <body>
+    <div id="app" class="app">
+      <div id="header" class="header">
+        <div class="logo">BATTLESHIP</div>
+      </div>
+      <div id="main" class="main">
+        <div class="main-block player">
+          <div class="controls">
+            <div class="instruction">Drag and place a ship</div>
+            <div class="port">
+              <div class="dock s4">
+                <div class="dock__ship s4"></div>
+                <span class="ship-count">x1</span>
+              </div>
+              <div class="dock s3">
+                <div class="dock__ship s3"></div>
+                <span class="ship-count">x2</span>
+              </div>
+              <div class="dock s2">
+                <div class="dock__ship s2"></div>
+                <span class="ship-count">x3</span>
+              </div>
+              <div class="dock s1">
+                <div class="dock__ship s1"></div>
+                <span class="ship-count">x4</span>
+              </div>
+            </div>
+            <div class="buttons">
+              <div class="buttons-wrap">
+                <button class="buttons-wrap__button" type="button">
+                  Reset
+                </button>
+                <button class="buttons-wrap__button" type="button">
+                  Random
+                </button>
+                <button class="buttons-wrap__button" type="button">
+                  Start game
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="board">
+            <div class="board__grid" id="grid-player"></div>
+            <div class="board__label">Your grid</div>
+          </div>
+          <div></div>
+        </div>
+        <div class="main-block computer">
+          <div class="board">
+            <div class="board__grid" id="grid-computer"></div>
+            <div class="board__label">Computer's grid</div>
+          </div>
+        </div>
+      </div>
+      <div id="footer" class="footer">
+        <div class="github">Made by Jonathan Dump</div>
+      </div>
+    </div>
+  </body>
 </html>
