Fix ship recognition

--- a/src/index.html
+++ b/src/index.html
@@ -18,23 +18,72 @@
             </div>
             <div class="port">
               <div class="dock d4" data-amount="x1">
-                <div class="ship s4" draggable="true" data-length="4"></div>
+                <div
+                  class="ship s4"
+                  draggable="true"
+                  data-length="4"
+                  data-index="1"
+                ></div>
               </div>
               <div class="dock d3" data-amount="x2">
-                <div class="ship s3" draggable="true" data-length="3"></div>
-                <div class="ship s3" draggable="true" data-length="3"></div>
+                <div
+                  class="ship s3"
+                  draggable="true"
+                  data-length="3"
+                  data-index="1"
+                ></div>
+                <div
+                  class="ship s3"
+                  draggable="true"
+                  data-length="3"
+                  data-index="2"
+                ></div>
               </div>
               <div class="dock d2" data-amount="x3">
-                <div class="ship s2" draggable="true" data-length="2"></div>
-                <div class="ship s2" draggable="true" data-length="2"></div>
-                <div class="ship s2" draggable="true" data-length="2"></div>
+                <div
+                  class="ship s2"
+                  draggable="true"
+                  data-length="2"
+                  data-index="1"
+                ></div>
+                <div
+                  class="ship s2"
+                  draggable="true"
+                  data-length="2"
+                  data-index="2"
+                ></div>
+                <div
+                  class="ship s2"
+                  draggable="true"
+                  data-length="2"
+                  data-index="3"
+                ></div>
               </div>
               <div class="dock d1" data-amount="x4">
-                <div class="ship s1" draggable="true" data-length="1"></div>
-                <div class="ship s1" draggable="true" data-length="1"></div>
-                <div class="ship s1" draggable="true" data-length="1"></div>
-                <div class="ship s1" draggable="true" data-length="1"></div>
-                <!-- <span class="ship-count">x4</span> -->
+                <div
+                  class="ship s1"
+                  draggable="true"
+                  data-length="1"
+                  data-index="1"
+                ></div>
+                <div
+                  class="ship s1"
+                  draggable="true"
+                  data-length="1"
+                  data-index="2"
+                ></div>
+                <div
+                  class="ship s1"
+                  draggable="true"
+                  data-length="1"
+                  data-index="3"
+                ></div>
+                <div
+                  class="ship s1"
+                  draggable="true"
+                  data-length="1"
+                  data-index="4"
+                ></div>
               </div>
             </div>
             <div class="buttons">
