Make ship rotate

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
                   draggable="true"
                   data-length="4"
                   data-index="1"
+                  data-ishorizontal="true"
                 ></div>
               </div>
               <div class="dock d3" data-amount="x2">
@@ -31,12 +32,14 @@
                   draggable="true"
                   data-length="3"
                   data-index="1"
+                  data-ishorizontal="true"
                 ></div>
                 <div
                   class="ship s3"
                   draggable="true"
                   data-length="3"
                   data-index="2"
+                  data-ishorizontal="true"
                 ></div>
               </div>
               <div class="dock d2" data-amount="x3">
@@ -45,18 +48,21 @@
                   draggable="true"
                   data-length="2"
                   data-index="1"
+                  data-ishorizontal="true"
                 ></div>
                 <div
                   class="ship s2"
                   draggable="true"
                   data-length="2"
                   data-index="2"
+                  data-ishorizontal="true"
                 ></div>
                 <div
                   class="ship s2"
                   draggable="true"
                   data-length="2"
                   data-index="3"
+                  data-ishorizontal="true"
                 ></div>
               </div>
               <div class="dock d1" data-amount="x4">
