--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,12 @@
                   data-length="4"
                   data-index="1"
                   data-ishorizontal="true"
-                ></div>
+                >
+                  <div class="ship__cell"></div>
+                  <div class="ship__cell"></div>
+                  <div class="ship__cell"></div>
+                  <div class="ship__cell"></div>
+                </div>
               </div>
               <div class="dock d3" data-amount="x2">
                 <div
@@ -33,14 +38,22 @@
                   data-length="3"
                   data-index="1"
                   data-ishorizontal="true"
-                ></div>
+                >
+                  <div class="ship__cell"></div>
+                  <div class="ship__cell"></div>
+                  <div class="ship__cell"></div>
+                </div>
                 <div
                   class="ship s3"
                   draggable="true"
                   data-length="3"
                   data-index="2"
                   data-ishorizontal="true"
-                ></div>
+                >
+                  <div class="ship__cell"></div>
+                  <div class="ship__cell"></div>
+                  <div class="ship__cell"></div>
+                </div>
               </div>
               <div class="dock d2" data-amount="x3">
                 <div
@@ -49,21 +62,30 @@
                   data-length="2"
                   data-index="1"
                   data-ishorizontal="true"
-                ></div>
+                >
+                  <div class="ship__cell"></div>
+                  <div class="ship__cell"></div>
+                </div>
                 <div
                   class="ship s2"
                   draggable="true"
                   data-length="2"
                   data-index="2"
                   data-ishorizontal="true"
-                ></div>
+                >
+                  <div class="ship__cell"></div>
+                  <div class="ship__cell"></div>
+                </div>
                 <div
                   class="ship s2"
                   draggable="true"
                   data-length="2"
                   data-index="3"
                   data-ishorizontal="true"
-                ></div>
+                >
+                  <div class="ship__cell"></div>
+                  <div class="ship__cell"></div>
+                </div>
               </div>
               <div class="dock d1" data-amount="x4">
                 <div
@@ -71,25 +93,33 @@
                   draggable="true"
                   data-length="1"
                   data-index="1"
-                ></div>
+                >
+                  <div class="ship__cell"></div>
+                </div>
                 <div
                   class="ship s1"
                   draggable="true"
                   data-length="1"
                   data-index="2"
-                ></div>
+                >
+                  <div class="ship__cell"></div>
+                </div>
                 <div
                   class="ship s1"
                   draggable="true"
                   data-length="1"
                   data-index="3"
-                ></div>
+                >
+                  <div class="ship__cell"></div>
+                </div>
                 <div
                   class="ship s1"
                   draggable="true"
                   data-length="1"
                   data-index="4"
-                ></div>
+                >
+                  <div class="ship__cell"></div>
+                </div>
               </div>
             </div>
             <div class="buttons">
