Save with 'x' on hit

--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
                   type="button"
                   id="reset-button"
                 >
-                  Reset
+                  Reset ships
                 </button>
                 <button
                   class="buttons-wrap__button"
@@ -139,7 +139,7 @@
                   Random
                 </button>
                 <button
-                  class="buttons-wrap__button"
+                  class="buttons-wrap__button disabled-button"
                   type="button"
                   id="start-button"
                 >
@@ -147,6 +147,7 @@
                 </button>
               </div>
             </div>
+            <button class="restart-button" type="button">Restart</button>
           </div>
           <div class="board">
             <div class="board__grid" id="grid-player"></div>
