Make sink ship to be surrounded with misses

--- a/src/index.html
+++ b/src/index.html
@@ -166,5 +166,10 @@
         <div class="github">Made by Jonathan Dump</div>
       </div>
     </div>
+    <div class="game-over-bg"></div>
+    <div class="game-over">
+      <div class="game-over__winner"></div>
+      <button type="button" class="game-over__play-again">Play again</button>
+    </div>
   </body>
 </html>
