make start game functionality

--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@
     </div>
     <div class="game-over-bg"></div>
     <div class="game-over">
-      <div class="game-over__winner"></div>
+      <div class="game-over__winner">The winner is computer</div>
       <button type="button" class="game-over__play-again">Play again</button>
     </div>
   </body>
