--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,9 @@
         </div>
       </div>
       <div id="footer" class="footer">
-        <div class="github">Made by Jonathan Dump</div>
+        <a href="https://github.com/JonathanDump" class="github"
+          >Made by Jonathan Dump </a
+        ><img src="/src/icons/github .svg" alt="" />
       </div>
     </div>
     <div class="game-over-bg"></div>
